# LLM-RAG

./: .env.example  .gitignore  .webui_secret_key  Makefile  README.md  docker-compose.open-webui.yml  pyproject.toml
config/: logging.yaml  settings.yaml
data/raw/: README (1).md  README (2).md  README.md
docs/: architecture.md  data_format.md  deployment_rhel7.md
scripts/: compose.sh  ingest.py  install_python_311_mac.sh  install_python_311_rhel7.sh  prepare_ollama.sh  query_cli.py  run_api.py  run_quick_backend.sh  run_quick_mac.sh  run_quick_openwebui.sh  run_quick_rhel7.sh
scripts/app/: query_cli.py
scripts/run/: backend.sh  openwebui.sh
scripts/setup/: install_python_311_mac.sh  install_python_311_rhel7.sh  prepare_ollama.sh
src/rag/: __init__.py  logging.py  models.py  runtime.py  settings.py
src/rag/api/: app.py
src/rag/embeddings/: __init__.py  base.py  ollama.py
src/rag/llm/: __init__.py  base.py  cloud.py  ollama.py
src/rag/loaders/: __init__.py  html.py  json.py  markdown.py  pdf.py  structured.py  text.py  xml.py  yaml.py
src/rag/rag/: pipeline.py  prompts.py
src/rag/text/: __init__.py  chunking.py  normalization.py
src/rag/vectorstore/: base.py  chroma.py
tests/: test_chunking.py  test_loaders.py  test_pipeline_smoke.py  test_settings_model.py
